pesky add layout issues on mobile for phrases and proverbs

--- a/app/assets/styles/main.less
+++ b/app/assets/styles/main.less
@@ -21,7 +21,7 @@ body {
   width: 36px;
   height: 30px;
   left: 36px;
-  top: 10px;
+  top: 20px;
 }
 
 /* Color/shape of burger icon bars */
